--- a/templates/login.html
+++ b/templates/login.html
@@ -9,23 +9,38 @@
 </head>
 <body>
 <div class="container-lg mt-4">
-    <form>
-        <div class="mb-3">
-            <label for="username" class="form-label">Username</label>
-            <input type="text" class="form-control" id="username">
-        </div>
-        <div class="mb-3">
-            <label for="password" class="form-label">Password</label>
-            <input type="password" class="form-control" id="password">
-        </div>
-        <div class="mb-3">
-            <label for="dlcs" class="form-label">DLCS Root</label>
-            <input type="text" class="form-control" id="dlcs" aria-describedby="dlcsHelp"
-                   placeholder="dlcs.digirati.io">
-            <div id="dlcsHelp" class="form-text">Root of DLCS instance to use for this session.</div>
-        </div>
-        <button type="submit" class="btn btn-primary">Submit</button>
-    </form>
+    <div class="row">
+        <form>
+            <div class="mb-3">
+                <label for="username" class="form-label">Username</label>
+                <input type="text" class="form-control" id="username">
+            </div>
+            <div class="mb-3">
+                <label for="password" class="form-label">Password</label>
+                <input type="password" class="form-control" id="password">
+            </div>
+            <div class="mb-3">
+                <label for="dlcs" class="form-label">DLCS Root</label>
+                <input type="text" class="form-control" id="dlcs" aria-describedby="dlcsHelp"
+                       placeholder="{{ default_root }}">
+                <div id="dlcsHelp" class="form-text">Root of DLCS instance to use for this session.</div>
+            </div>
+            <button type="submit" class="btn btn-primary">Submit</button>
+        </form>
+    </div>
+    <div class="row">
+        <p>Use one of the following users to login:</p>
+        <dl>
+            {% for user in users %}
+            <dt>Credentials</dt>
+            <dd>{{ user.username }} : {{ user.password }}</dd>
+
+            <dt>Roles</dt>
+            <dd>{{ user.roles }}</dd>
+            <hr>
+            {% endfor %}
+        </dl>
+    </div>
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
